fix: Fix display of WRC Links header on mobile devices

--- a/client/src/components/wrcLinks/index.scss
+++ b/client/src/components/wrcLinks/index.scss
@@ -1,20 +1,21 @@
 .WRCLinksDiv1{
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    h1{
+        font-size: 2.5em;
+        font-weight: 900;
+        padding: 10px;
+        text-align: center;
+    }
 
     div{
         width: 70%;
         display: flex;
         flex-direction: column;
-
-        h1{
-            font-size: 2.5em;
-            font-weight: 900;
-            text-align: center;
-            padding: 20px;
-        }
 
         div{
             width: 100%;
